--- a/style.css
+++ b/style.css
@@ -83,14 +83,16 @@ body{
   position: relative;
   cursor: pointer;
 }
-
-.side-bar .menu .item a{
-  color: #fff;
-  font-size: 16px;
+.side-bar .menu .name a{
+  color: #D3D3D3;
+  font-size: 15.5px;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-variant: small-caps;
+  font-weight: bolder ;   
   text-decoration: none;
   display: block;
   padding: 5px 30px;
-  line-height: 60px;
+  line-height: 100px;
 }
 
 .side-bar .menu .item a:hover{
